[package]
name = "yew-tutorial"
version = "0.1.0"
authors = ["Bojun Jin <davidjin0418@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.12"
rand = { version = "0.7", features = ["wasm-bindgen"] }


[lib]
crate-type = ["cdylib"]